--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-img/bluesky.jpg
 email: 1115223619@qq.com
 description: "关于量化投资、机器学习 | 雨栋，Data science & Python Lover，Shenzhen University graduate | 这里是雨栋的个人博客，与你一起发现更大的世界。"
 keyword: "雨栋，量化投资，机器学习，数据分析，数据挖掘，运动，乒乓球，深圳大学"
-url: "https://ownyulife.top"              # your host, for absolute URL
+url: "http://ownyulife.top"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
