--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: 1115223619@qq.com
 description: "关于量化投资、机器学习 | 雨栋，Data science & Python Lover，Shenzhen University graduate | 这里是雨栋的个人博客，与你一起发现更大的世界。"
 keyword: "雨栋，量化投资，机器学习，数据分析，数据挖掘，运动，乒乓球，深圳大学"
 url: "https://ownyulife.top"              # your host, for absolute URL
-baseurl: "/post"                             # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "_posts"                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
@@ -31,7 +31,7 @@ paginate: 6
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
-timezone: CN  
+#timezone: CN  
 
 
 
@@ -107,7 +107,7 @@ service-worker: true
 
 
 # MathJax rendering for layout:page (e.g. post preview)
-page-mathjax: true
+page-mathjax: false
 
 
 
