--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "俞"
 SEOTitle: YU Blog
-header-img: img/home-img/bluesky.jpg
+header-img: img/home-img/group7.gif
 email: 1115223619@qq.com
 description: "关于量化投资、机器学习 | 雨栋，Data science & Python Lover，Shenzhen University graduate | 这里是雨栋的个人博客，与你一起发现更大的世界。"
 keyword: "雨栋，量化投资，机器学习，数据分析，数据挖掘，运动，乒乓球，Python,深圳大学"
