--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,9 @@ future: true
 RSS: false
 weibo_username: 2256575271
 qqmail_username: 
-zhihu_username:   yu-dong-99-52
+zhihu_username:   zxlrs
+#zhihu_username:   yu-dong-99-52
+
 github_username:   marktext
 twitter_username:  Leo_Mosqi
 facebook_username: leo.franklin.5680
