--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,7 @@ ga_domain: ownyulife.top
 # Sidebar settings
 sidebar: true                       # whether or not using Sidebar.
 sidebar-about-description: "大多数人都高估了他们一天能做的事情，但低估了他们一年能做的事情。"
-sidebar-avatar: /img/face.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
-
+sidebar-avatar: /img/yu-img/me-img/face.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 # Featured Tags
